Motion path no found with Armature in Object Mode #70124

Closed
opened 2019-09-20 20:04:04 +02:00 by Jefferson Rausseo · 9 comments

System Information
Operating system: Linux-4.19.69-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: AMD Radeon (TM) RX 480 Graphics (POLARIS10, DRM 3.27.0, 4.19.69-1-MANJARO, LLVM 8.0.1) X.Org 4.5 (Core Profile) Mesa 19.1.5

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-20 15:42, hash: adfe68e202
Worked: Blender 2.79b

Short description of error
The motion path does not work in armatures when used in object mode. It works correctly in pose mode and works correctly on other objects such as mesh, cameras, lights, etc.

Exact steps for others to reproduce the error

  1. Add an Armature.
  2. Add two keyframes (with two different frames and locations).
  3. In Properties Editor with Object mode, "Properties->Object properte->Motion Paths->Calculate"
  4. You don't see the result on the viewport.

bug motion paths.png

**System Information** Operating system: Linux-4.19.69-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits Graphics card: AMD Radeon (TM) RX 480 Graphics (POLARIS10, DRM 3.27.0, 4.19.69-1-MANJARO, LLVM 8.0.1) X.Org 4.5 (Core Profile) Mesa 19.1.5 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-20 15:42, hash: `adfe68e202` Worked: Blender 2.79b **Short description of error** The motion path does not work in armatures when used in object mode. It works correctly in pose mode and works correctly on other objects such as mesh, cameras, lights, etc. **Exact steps for others to reproduce the error** 1. Add an Armature. 2. Add two keyframes (with two different frames and locations). 3. In Properties Editor with Object mode, "Properties->Object properte->Motion Paths->Calculate" 4. You don't see the result on the viewport. ![bug motion paths.png](https://archive.blender.org/developer/F7761153/bug_motion_paths.png)

Added subscriber: @jefrau

Added subscriber: @jefrau

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Could you share a simple file demonstrating the problem?

Could you share a simple file demonstrating the problem?

File with error saved in Blender 2.80 Official:
file_2.80_official.blend

File with error saved in Blender 2.81 5a6ab6f59468:
file_2.81.blend

File with error saved in Blender 2.80 Official: [file_2.80_official.blend](https://archive.blender.org/developer/F7772798/file_2.80_official.blend) File with error saved in Blender 2.81 5a6ab6f59468: [file_2.81.blend](https://archive.blender.org/developer/F7772799/file_2.81.blend)
Sergey Sharybin was assigned by Germano Cavalcante 2019-09-24 15:05:17 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@Sergey, if I'm not mistaken, you have recently worked in this area.
Do you know why this happens? (armature objects don't have motion paths).

@Sergey, if I'm not mistaken, you have recently worked in this area. Do you know why this happens? (armature objects don't have motion paths).

This issue was referenced by 561dfd12be

This issue was referenced by 561dfd12be1846ba7ce2647bbb82112fb7ea1dd6

The motion path for Armatures works well in Blender 2.79.
blender_good_2.79.png

The motion path for Armatures works well in Blender 2.79. ![blender_good_2.79.png](https://archive.blender.org/developer/F7773439/blender_good_2.79.png)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70124
No description provided.