Fix T70124: Motion path not drawn for Armature in Object Mode